// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load plugins Load plugins for a site 1`] = `
Array [
  Object {
    "browserAPIs": Array [],
    "id": "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5",
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "1fc32581-893a-55e8-8927-bcd667e2b700",
    "name": "load-babel-config",
    "nodeAPIs": Array [
      "onPreBootstrap",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "a5079d69-ba80-53dc-82f9-0f440bd5448c",
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "onCreatePage",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "f795702c-a3b8-5a88-88ee-5d06019d44fa",
    "name": "prod-404",
    "nodeAPIs": Array [
      "onCreatePage",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "6f4b2fa9-66b5-5205-a03f-140005a2cfe5",
    "name": "webpack-theme-component-shadowing",
    "nodeAPIs": Array [
      "onCreateWebpackConfig",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "7374ebf2-d961-52ee-92a2-c25e7cb387a9",
    "name": "default-site-plugin",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "05b0e721-7f52-56a1-8e3a-8fe916d2db3f",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/dev-404-page/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "cfaa9b61-cf8c-57d4-816d-8f2471a85edb",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/load-babel-config/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "83ef3b54-8f9c-5296-bf07-e2d5edd69549",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/internal-data-bridge/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "5cdbe533-cab2-5a31-9a81-3155c134f505",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/prod-404/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "d69650b9-e8ff-58bf-9e39-c05a89c44c4f",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/webpack-theme-component-shadowing/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "1b54a1b8-1d5a-551e-af0c-bfb0949d81ad",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "cc2293db-7635-5675-bb5e-05c41ff28688",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
]
`;

exports[`Load plugins Loads plugins defined with an object but without an option key 1`] = `
Array [
  Object {
    "browserAPIs": Array [],
    "id": "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5",
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "1fc32581-893a-55e8-8927-bcd667e2b700",
    "name": "load-babel-config",
    "nodeAPIs": Array [
      "onPreBootstrap",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "a5079d69-ba80-53dc-82f9-0f440bd5448c",
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "onCreatePage",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "f795702c-a3b8-5a88-88ee-5d06019d44fa",
    "name": "prod-404",
    "nodeAPIs": Array [
      "onCreatePage",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "6f4b2fa9-66b5-5205-a03f-140005a2cfe5",
    "name": "webpack-theme-component-shadowing",
    "nodeAPIs": Array [
      "onCreateWebpackConfig",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "c731052f-1e62-5905-9fb3-edc9057be8f1",
    "name": "TEST",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "7374ebf2-d961-52ee-92a2-c25e7cb387a9",
    "name": "default-site-plugin",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "05b0e721-7f52-56a1-8e3a-8fe916d2db3f",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/dev-404-page/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "cfaa9b61-cf8c-57d4-816d-8f2471a85edb",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/load-babel-config/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "83ef3b54-8f9c-5296-bf07-e2d5edd69549",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/internal-data-bridge/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "5cdbe533-cab2-5a31-9a81-3155c134f505",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/prod-404/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "d69650b9-e8ff-58bf-9e39-c05a89c44c4f",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/webpack-theme-component-shadowing/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "b67d0fe8-41da-56de-a067-35252583f808",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "__TEST__/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "1b54a1b8-1d5a-551e-af0c-bfb0949d81ad",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "cc2293db-7635-5675-bb5e-05c41ff28688",
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "path": "/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
]
`;
